--- a/HorseRacing.Data/HorseRacing.Data.csproj
+++ b/HorseRacing.Data/HorseRacing.Data.csproj
@@ -5,6 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="HorseRacingRepository.cs" />
+    <Compile Remove="IHorseRacingRepository.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.17" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.17">
       <PrivateAssets>all</PrivateAssets>
