Added seed data by using MigrationBuilder.Sql method to run Raw sql commands

--- a/HorseRacing.Data/appsettings.json
+++ b/HorseRacing.Data/appsettings.json
@@ -1,5 +1,6 @@
 ﻿{
   "ConnectionStrings": {
     "HorseRacingConnectionString": "Server=(localdb)\\mssqllocaldb;Database=HorseRacing;Trusted_Connection=True;MultipleActiveResultSets=true"
+    //"HorseRacingConnectionString": "Server=.\\SQLExpress;AttachDbFilename=|DataDirectory|\\HorseRacing.mdf;Database=HorseRacing;Trusted_Connection=true"
   }
 }
