--- a/HorseRacing.MVC/appsettings.json
+++ b/HorseRacing.MVC/appsettings.json
@@ -8,6 +8,9 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "HorseRacingConnectionString": "Server=(localdb)\\mssqllocaldb;Database=HorseRacing;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "HorseRacingConnectionString": "Server=(localdb)\\mssqllocaldb;Database=HorseRacing;Trusted_Connection=True;MultipleActiveResultSets=true",
+    //"HorseRacingConnectionString": "Server=.\\SQLExpress;Database=HorseRacing;Trusted_Connection=True;MultipleActiveResultSets=true"
+    //"HorseRacingConnectionString": "Server=.\\SQLExpress;AttachDbFilename=|DataDirectory|\\HorseRacing.mdf;Database=HorseRacing;Trusted_Connection=true"
+
   }
 }
